# osint_surveillance_detector_repo

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile.nest  README.md  SECURITY.md  docker-compose.yml  flake.nix  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: build-push.yml  security-scan.yml
docs/agent-knowledge/: architecture_overview.md  config_guide_env_vars.md  tool_reference_alert_test.md  tool_reference_config_validate.md  tool_reference_docs_query.md  tool_reference_logs_query.md  tool_reference_status.md  tool_reference_watch.md  troubleshooting.md  workflow_investigate_brute_force.md  workflow_verify_stack_health.md
ghostmode/: __main__.py  alert.py  alerter.py  cli.py  cloudflare_monitor.py  config.py  dashboard.py  db_bootstrap.py  docs.py  event_store.py  geoip.py  github_auth.py  linear_proxy.py  logs.py  mcp_server.py  metrics.py  models.py  nest_dashboard.py  rss_proxy.py  sanitize.py  status.py  watch.py
infra/: acm.tf  alb.tf  backend.tf  cloudflare.tf  cloudwatch.tf  cognito.tf  ecs.tf  efs.tf  iam.tf  locals.tf  main.tf  nginx.conf.tftpl  outputs.tf  secrets.tf  security-groups.tf  terraform.tfvars.example  variables.tf  versions.tf
monitoring/: blackbox.yml  prometheus.yml
monitoring/alerting/: rules.yml
opencanary/: opencanary.conf
src/ghostmode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_alert.py  test_cli.py  test_config.py  test_docs.py  test_logs.py  test_mcp_server.py  test_models.py  test_sanitize.py  test_status.py  test_watch.py
(+5 files in other folders)
